--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
+main.accio#job {
+    width: 150px;
+    height: 150px;
+    background-color: #000000;
+}
 
-/* Your CSS Code here. */
+/* Style for the paragraph element */
+p.hello-accio {
+    color: #ffffff;
+    margin-left: 32px;
+    padding: 10px;
+}
